# IM_Client

./: .gitignore  README.md
Rust_IM/database/: Cargo.toml
Rust_IM/database/migration/2023-08-31-01_im/: up.sql
Rust_IM/database/src/: database.rs  error.rs  lib.rs  pool.rs  schema.rs
Rust_IM/im/: Cargo.toml  im.sqlite
Rust_IM/im/db/: im.sqlite
Rust_IM/im/src/: error.rs  im_db.rs  im_manager.rs  im_model.rs  im_mqtt.rs  lib.rs
Rust_IM/mqtt/: Cargo.toml
Rust_IM/mqtt/src/: error.rs
SwiftIM/SwiftIM/: AppDelegate.swift  SceneDelegate.swift  SwiftIM.h  ViewController.swift
SwiftIM/SwiftIM.xcodeproj/: project.pbxproj
SwiftIM/SwiftIM.xcodeproj/project.xcworkspace/xcuserdata/alan.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftIM/SwiftIM.xcodeproj/xcuserdata/alan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SwiftIM/SwiftIM.xcodeproj/xcuserdata/alan.xcuserdatad/xcschemes/: xcschememanagement.plist
SwiftIMGuest1/SwiftIMGuest1/: AppDelegate.swift  SceneDelegate.swift  SwiftIMGuest1-Bridging-Header.h  ViewController.swift  im.swift  imFFI.h  imffi.swift  imffiFFI.h  rust.h
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/: project.pbxproj
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/project.xcworkspace/xcuserdata/alan.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/project.xcworkspace/xcuserdata/wallerface.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/xcuserdata/alan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/xcuserdata/alan.xcuserdatad/xcschemes/: xcschememanagement.plist
SwiftIMGuest1/SwiftIMGuest1.xcodeproj/xcuserdata/wallerface.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SwiftIMGuest1/SwiftIMGuest1/Assets.xcassets/recv.imageset/: Contents.json
SwiftIMGuest1/SwiftIMGuest1/Assets.xcassets/send.imageset/: Contents.json
SwiftIMGuest1/SwiftIMGuest1/Controller/: ViewController.swift
SwiftIMGuest1/SwiftIMGuest1/Extension/: CustomExtension.swift  ModelExtension.swift
SwiftIMGuest1/SwiftIMGuest1/FFI/: imffi.swift  imffiFFI.h
SwiftIMGuest1/SwiftIMGuest1/Model/: IMDataSource.swift
SwiftIMGuest1/SwiftIMGuest1/View/: IMBasicCell.swift  IMFormatBaseView.swift  IMFormatTextView.swift  IMRecvCell.swift  IMSendCell.swift
SwiftIMGuest1/SwiftIMGuest1/config/: IMConfig.swift
SwiftIMGuest2/SwiftIMGuest2/: AppDelegate.swift  SceneDelegate.swift  SwiftIMGuest2-Bridging-Header.h  ViewController.swift  im.swift  imFFI.h  imffi.swift  imffiFFI.h  rust.h
SwiftIMGuest2/SwiftIMGuest2.xcodeproj/: project.pbxproj
SwiftIMGuest2/SwiftIMGuest2.xcodeproj/project.xcworkspace/xcuserdata/alan.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftIMGuest2/SwiftIMGuest2.xcodeproj/project.xcworkspace/xcuserdata/wallerface.xcuserdatad/: UserInterfaceState.xcuserstate
SwiftIMGuest2/SwiftIMGuest2.xcodeproj/xcuserdata/alan.xcuserdatad/xcschemes/: xcschememanagement.plist
SwiftIMGuest2/SwiftIMGuest2/Controller/: ViewController.swift
SwiftIMGuest2/SwiftIMGuest2/FFI/: im.swift  imFFI.h
SwiftIMGuest2/SwiftIMGuest2/View/: CustomIMTableViewCell.swift  ToolBar.swift
SwiftIMGuest2/SwiftIMGuest2/config/: IMConfig.swift
database/: Cargo.toml
database/migration/2023-08-31-01_im/: up.sql
database/src/: conn_ext.rs  conn_manager.rs  conn_pool.rs  conn_pragma.rs  error.rs  lib.rs
demo/: Cargo.toml
demo/src/: main.rs
demo1/: Cargo.toml
demo1/db/: im.sqlite
demo1/src/: main.rs
demo2/db/: im.sqlite
demo2/src/: main.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
im/: Cargo.toml
im/src/: error.rs  im_db.rs  im_manager.rs  im_model.rs  im_mqtt.rs  lib.rs  main.rs  schema.rs
mqtt/: Cargo.toml
mqtt/src/: error.rs  lib.rs  mqtt_manager.rs
uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: main.rs
