[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "*", features = ["sqlite"]}
diesel_derives = {version = "*", features = ["sqlite"]}
diesel_migrations = {version = "1.4.0", features = ["sqlite"]}
r2d2 = "*"

[dependencies.migrations_internals]
version = "*"
