[package]
name = "ffi"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
im = { path = '../Rust_IM/im'}
libc = "0.2"
rand = "*"
uniffi = { version = "0.28.3", features = ["cli"] }
