[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel ={ version = "2.2.2",  features = ["sqlite", "r2d2"]}
diesel_derives = { version = "2.2.2", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

r2d2 = "0.8.10"
thiserror = "1.0.47"
once_cell = "1.18.0"
scheduled-thread-pool = "0.2.5"
