[package]
name = "im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.8", features = ["sqlite"]}
database = { path = '../database'}
mqtt = { path = '../mqtt'}
rumqttc = "0.22.0"
thiserror = "1.0.47"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = { version = "0.28.3", features = ["cli"] }
